# xne-express/api/controllers/article.js
@@ -1,3 +1,10 @@
+/*
+ * @Description: In User Settings Edit
+ * @Author: mapleChain
+ * @Date: 2019-05-23 17:16:24
+ * @LastEditTime: 2019-06-12 11:27:11
+ * @LastEditor: mapleChain
+ */
 /**
  * Created by maple
  */
@@ -5,36 +12,33 @@
 var appConfig = require('../../config')
 var ws = require('xne-framework/vessel/logger/index')(appConfig.logConfig);
 var utils = require('../helpers/utils')
-var Article = require('xne-db/article/Article')
+var Article = require('xne-db/mongo/Article')
 var CustomError = require('xne-framework/vessel/utils/customError')
 
 
 module.exports = {
-    getInfo: getInfo,
+    getArticleInfo: getArticleInfo,
 }
 
+
 /**
- * 例子：通用查询
- * @param {keyword}
+ * @description: mongo - 查询实例
+ * @param {type} id: 文章编号
+ * @return: 文章明细
  */
-function getInfo(req, res) {
+function getArticleInfo(req, res) {
     try {
-        var keyword = req.swagger.params.keyword.value;
-        var reg = new RegExp(keyword, 'i') //不区分大小写
+        var id = req.swagger.params.id.value;
         Article.find({
-                $or: [ //多条件，数组
-                    { title: { $regex: reg } },
-                    { content: { $regex: reg } }
-                ]
-            }, )
-            .then(result => {
+                articleId: id
+            }, ).then(result => {
                 return res.json({ data: result });
-            })
-            .catch((err) => {
+            }).catch((err) => {
                 throw new CustomError("999", err.message ? err.message : err)
             })
     } catch (e) {
-        ws.log('error', `getInfo_catch_error ${e}`)
+        ws.log('ERROR', `QUERY_ARTICLE_ERROR ${e}`)
         utils.errorHandle(res, e);
     }
 }
+
